--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.6",
     "@synthetixio/contracts-interface": "^2.67.0-alpha",
     "@synthetixio/providers": "^2.68.0-alpha",
     "@synthetixio/queries": "^2.67.0-alpha",
@@ -26,8 +25,7 @@
     "react-query": "^3.35.0",
     "react-select": "^5.4.0",
     "react-table": "^7.7.0",
-    "recharts": "^2.1.9",
-    "styled-components": "^5.3.5"
+    "recharts": "2.1.12"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
