--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@synthetixio/wei": "^2.68.0-alpha",
     "@types/recharts": "^1.8.23",
     "codegen-graph-ts": "^0.1.4",
+    "dotenv": "^16.0.3",
     "ethers": "^5.6.5",
     "graphql": "^15.5.0",
     "graphql-request": "^4.3.0",
