--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^15.5.0",
     "graphql-request": "^4.3.0",
     "next": "12.1.5",
+    "node-cache": "^5.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.4.0",
